docs/api/qiskit/0.25/qiskit.algorithms.optimizers.IMFIL.md
# qiskit.algorithms.optimizers.IMFIL

`IMFIL(maxiter=1000)`

IMplicit FILtering algorithm.

Implicit filtering is a way to solve bound-constrained optimization problems for which derivatives are not available. In comparison to methods that use interpolation to reconstruct the function and its higher derivatives, implicit filtering builds upon coordinate search followed by interpolation to get an approximate gradient.

Uses skquant.opt installed with pip install scikit-quant. For further detail, please refer to [https://github.com/scikit-quant/scikit-quant](https://github.com/scikit-quant/scikit-quant) and [https://qat4chem.lbl.gov/software](https://qat4chem.lbl.gov/software).

**Parameters**

**maxiter** (`int`) – Maximum number of function evaluations.

**Raises**

[**MissingOptionalLibraryError**](qiskit.aqua.MissingOptionalLibraryError#qiskit.aqua.MissingOptionalLibraryError "qiskit.aqua.MissingOptionalLibraryError") – scikit-quant not installed

`__init__(maxiter=1000)`

**Parameters**

**maxiter** (`int`) – Maximum number of function evaluations.

**Raises**

[**MissingOptionalLibraryError**](qiskit.aqua.MissingOptionalLibraryError#qiskit.aqua.MissingOptionalLibraryError "qiskit.aqua.MissingOptionalLibraryError") – scikit-quant not installed

## Methods

|                                                                                                                                                                  |                                                                                                           |
| ---------------------------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.algorithms.optimizers.IMFIL.__init__ "qiskit.algorithms.optimizers.IMFIL.__init__")(\[maxiter])                                             | **type maxiter**`int`                                                                                     |
| [`get_support_level`](#qiskit.algorithms.optimizers.IMFIL.get_support_level "qiskit.algorithms.optimizers.IMFIL.get_support_level")()                            | Returns support level dictionary.                                                                         |
| [`gradient_num_diff`](#qiskit.algorithms.optimizers.IMFIL.gradient_num_diff "qiskit.algorithms.optimizers.IMFIL.gradient_num_diff")(x\_center, f, epsilon\[, …]) | We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center. |
| [`optimize`](#qiskit.algorithms.optimizers.IMFIL.optimize "qiskit.algorithms.optimizers.IMFIL.optimize")(num\_vars, objective\_function\[, …])                   | Runs the optimization.                                                                                    |
| [`print_options`](#qiskit.algorithms.optimizers.IMFIL.print_options "qiskit.algorithms.optimizers.IMFIL.print_options")()                                        | Print algorithm-specific options.                                                                         |
| [`set_max_evals_grouped`](#qiskit.algorithms.optimizers.IMFIL.set_max_evals_grouped "qiskit.algorithms.optimizers.IMFIL.set_max_evals_grouped")(limit)           | Set max evals grouped                                                                                     |
| [`set_options`](#qiskit.algorithms.optimizers.IMFIL.set_options "qiskit.algorithms.optimizers.IMFIL.set_options")(\*\*kwargs)                                    | Sets or updates values in the options dictionary.                                                         |
| [`wrap_function`](#qiskit.algorithms.optimizers.IMFIL.wrap_function "qiskit.algorithms.optimizers.IMFIL.wrap_function")(function, args)                          | Wrap the function to implicitly inject the args at the call of the function.                              |

## Attributes

|                                                                                                                                                                   |                                     |
| ----------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------- |
| [`bounds_support_level`](#qiskit.algorithms.optimizers.IMFIL.bounds_support_level "qiskit.algorithms.optimizers.IMFIL.bounds_support_level")                      | Returns bounds support level        |
| [`gradient_support_level`](#qiskit.algorithms.optimizers.IMFIL.gradient_support_level "qiskit.algorithms.optimizers.IMFIL.gradient_support_level")                | Returns gradient support level      |
| [`initial_point_support_level`](#qiskit.algorithms.optimizers.IMFIL.initial_point_support_level "qiskit.algorithms.optimizers.IMFIL.initial_point_support_level") | Returns initial point support level |
| [`is_bounds_ignored`](#qiskit.algorithms.optimizers.IMFIL.is_bounds_ignored "qiskit.algorithms.optimizers.IMFIL.is_bounds_ignored")                               | Returns is bounds ignored           |
| [`is_bounds_required`](#qiskit.algorithms.optimizers.IMFIL.is_bounds_required "qiskit.algorithms.optimizers.IMFIL.is_bounds_required")                            | Returns is bounds required          |
| [`is_bounds_supported`](#qiskit.algorithms.optimizers.IMFIL.is_bounds_supported "qiskit.algorithms.optimizers.IMFIL.is_bounds_supported")                         | Returns is bounds supported         |
| [`is_gradient_ignored`](#qiskit.algorithms.optimizers.IMFIL.is_gradient_ignored "qiskit.algorithms.optimizers.IMFIL.is_gradient_ignored")                         | Returns is gradient ignored         |
| [`is_gradient_required`](#qiskit.algorithms.optimizers.IMFIL.is_gradient_required "qiskit.algorithms.optimizers.IMFIL.is_gradient_required")                      | Returns is gradient required        |
| [`is_gradient_supported`](#qiskit.algorithms.optimizers.IMFIL.is_gradient_supported "qiskit.algorithms.optimizers.IMFIL.is_gradient_supported")                   | Returns is gradient supported       |
| [`is_initial_point_ignored`](#qiskit.algorithms.optimizers.IMFIL.is_initial_point_ignored "qiskit.algorithms.optimizers.IMFIL.is_initial_point_ignored")          | Returns is initial point ignored    |
| [`is_initial_point_required`](#qiskit.algorithms.optimizers.IMFIL.is_initial_point_required "qiskit.algorithms.optimizers.IMFIL.is_initial_point_required")       | Returns is initial point required   |
| [`is_initial_point_supported`](#qiskit.algorithms.optimizers.IMFIL.is_initial_point_supported "qiskit.algorithms.optimizers.IMFIL.is_initial_point_supported")    | Returns is initial point supported  |
| [`setting`](#qiskit.algorithms.optimizers.IMFIL.setting "qiskit.algorithms.optimizers.IMFIL.setting")                                                             | Return setting                      |

`property bounds_support_level`

Returns bounds support level

`get_support_level()`

Returns support level dictionary.

`static gradient_num_diff(x_center, f, epsilon, max_evals_grouped=1)`

We compute the gradient with the numeric differentiation in the parallel way, around the point x\_center.

**Parameters**

*   **x\_center** (*ndarray*) – point around which we compute the gradient
*   **f** (*func*) – the function of which the gradient is to be computed.
*   **epsilon** (*float*) – the epsilon used in the numeric differentiation.
*   **max\_evals\_grouped** (*int*) – max evals grouped

**Returns**

the gradient computed

**Return type**

grad

`property gradient_support_level`

Returns gradient support level

`property initial_point_support_level`

Returns initial point support level

`property is_bounds_ignored`

Returns is bounds ignored

`property is_bounds_required`

Returns is bounds required

`property is_bounds_supported`

Returns is bounds supported

`property is_gradient_ignored`

Returns is gradient ignored

`property is_gradient_required`

Returns is gradient required

`property is_gradient_supported`

Returns is gradient supported

`property is_initial_point_ignored`

Returns is initial point ignored

`property is_initial_point_required`

Returns is initial point required

`property is_initial_point_supported`

Returns is initial point supported

`optimize(num_vars, objective_function, gradient_function=None, variable_bounds=None, initial_point=None)`

Runs the optimization.

`print_options()`

Print algorithm-specific options.

`set_max_evals_grouped(limit)`

Set max evals grouped

`set_options(**kwargs)`

Sets or updates values in the options dictionary.

The options dictionary may be used internally by a given optimizer to pass additional optional values for the underlying optimizer/optimization function used. The options dictionary may be initially populated with a set of key/values when the given optimizer is constructed.

**Parameters**

**kwargs** (*dict*) – options, given as name=value.

`property setting`

Return setting

`static wrap_function(function, args)`

Wrap the function to implicitly inject the args at the call of the function.

**Parameters**

*   **function** (*func*) – the target function
*   **args** (*tuple*) – the args to be injected

**Returns**

wrapper

**Return type**

function\_wrapper
